Underline truncated text correctly in a contrary flow

BUG=634445

Review-Url: https://codereview.chromium.org/2226043002
Cr-Commit-Position: refs/heads/master@{#410832}

Former-commit-id: 30b1157934288f2efe1a8e3a00acedc6506fb8ee